src/objects/QPMS__Score_Card_Definition__c.object
<CustomObject>
    <description>Score Card Definition</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Default_Score__c</fullName>
        <description>Default Score</description>
        <label>Default Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Module__c</fullName>
        <description>Module</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non_Conformance__c</fullName>
                    <label>NC</label>
                </value>
                <value>
                    <fullName>CAPA__c</fullName>
                    <label>CAPA</label>
                </value>
                <value>
                    <fullName>Audit__c</fullName>
                    <label>AUDIT</label>
                </value>
                <value>
                    <fullName>Observation__c</fullName>
                    <label>Observation</label>
                </value>
                <value>
                    <fullName>Inspection__c</fullName>
                    <label>Inspection</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Score_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Score Card</description>
        <label>Score Card</label>
        <referenceTo>QPMS__Score_Card__c</referenceTo>
        <relationshipName>Score_Card_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Score__c</fullName>
        <description>Score</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Selected_Field__c</fullName>
        <label>Selected Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk_Severity__c</fullName>
                    <label>Risk Severity</label>
                </value>
                <value>
                    <fullName>Risk_Priority__c</fullName>
                    <label>Priority</label>
                </value>
                <value>
                    <fullName>Severity__c</fullName>
                    <label>Severity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Selected_Value__c</fullName>
        <description>Selected Value</description>
        <label>Selected Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Catastrophic</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Danger</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Insignificant</fullName>
                </value>
                <value>
                    <fullName>Extreme</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Score Card Definition</label>
    <nameField>
        <displayFormat>SCH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Card Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>